fix(ui): show scrollbar on landing page (Fixes #202) (#239)

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -93,14 +93,8 @@
   }
 }
 
-html{
+html {
   overflow-y: scroll;
-  scrollbar-width: none; /* Firefox */
-}
-
-html::-webkit-scrollbar{
-  width: 0;
-  height: 0;
 }
 
 body{
